--- a/jfreereport-ext/README
+++ b/jfreereport-ext/README
@@ -12,7 +12,7 @@ clean and simple structures. Hopefully most classes in this subproject will
 keep a modular structure so that the user can remove unneeded parts easily.
 
 All extension packages will be located under the package 
-com.jrefinery.report.ext.
+org.jfree.report.ext.
 
 Note:
 When adding functionality that requires additional libraries make sure that
@@ -34,17 +34,51 @@ junit.jar       - The JUnit test library, available from "www.junit.org"
 log4j-1.2.3.jar - The Log4J logging framework: "jakarta.apache.org".
 JDK 1.4         - For the Java1.4 style logging support
 
+Servlet-Demo classes
+--------------------
+A simple web application demo and some servlet implementation which show
+how to use JFreeReport in an servlet environment are located in the package
+org.jfree.report.ext.servletdemo.
+
+The demo war file can be rebuild using the ant script by executing the
+target "build-war".
+
+Provided Modules
+----------------
+
+1. java.lang.prefs-configstore-module
+
+This module provides a config store implementation, which stores all
+settings by using the java.util.prefs API of JDK 1.4. Under windows, this
+will store all values in the registry.
+
+This module required that the configstore base module is present.
+
+2. java-1.4-logging-module
+
+The java1.4 logging module uses the classes from java.lang.logging to
+write the log-entries. The log system must be configured elsewhere.
+
+2. log4j-logging-module
+
+The Log4 logging module uses the Log4J library from Apache.org to
+perform the logging. This library supports direct logging to the
+system log service of Windows and Unix (Syslogd) as well as the logging
+into files. The Log4J library must be configured by the application,
+the module will not attemp to configure the log system.
+
+3. javax.print-export-gui
+
+This module is a replacement for the print export. The implementation
+will use the javax.print API of JDK1.4 to perform the printing. At the
+moment, we don't implement anything special in that module.
+
+This module depends on the java.awt.print-export-gui.
+
 
 JFreeReport Tests:
 ------------------
 
-JUnit test will be located in com.jrefinery.report.ext.junit and get removed
-from the base package.
-
-
-LogTargets
-------------------
-
-Enhanced log targets for the Log4J library and the Java 1.4 logging implementation
-are provided in the package com.jrefinery.report.ext.log.
-
+JUnit test are located in org.jfree.report.ext.junit and provide tests
+for the base package functionality. These classes are now included in an
+own jar file called jfreereport-<version>-junit.jar.
