--- a/jfreereport/README
+++ b/jfreereport/README
@@ -1,8 +1,8 @@
-**********************
-* JFREEREPORT 0.8.4  *
-**********************
+************************
+* JFREEREPORT 0.8.4_2  *
+************************
 
-15 Sep 2003
+18 Oct 2003
 
 1. INTRODUCTION
 ---------------
