--- a/jfreereport-ext/ChangeLog
+++ b/jfreereport-ext/ChangeLog
@@ -1,3 +1,10 @@
+0.8.4: (19-Oct-2003) :
+  * BugFix: Java1.4 printing did not show the progress monitor.
+  
+  * Warning: Java1.4 printing does not accept changes of the 
+    pageformat or the borders and will not show the number of pages
+    of the report yet. 
+
 0.8.2: (12-Apr-2003) :
   * Nothing new, just a release to keep in sync with the main project.
 
