--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -3,6 +3,13 @@
 ---------------
 A list of changes in recent versions:
 
+0.8.4-3 (22-Oct-2003):
+        * BugFix: PlainText output fixed. It was funnily messed up when
+          handling borders and was fed in the wrong way by some of the demos.
+
+        * BugFix: TotalItemCountFunction fixed; another stupid Copy&Paste
+          bug :(
+
 0.8.4-2 (19-Oct-2003):
         * BugFix: Exceptions in the repagination did not close the progress
           monitor. 
