--- a/jfreereport-ext/README
+++ b/jfreereport-ext/README
@@ -32,7 +32,10 @@ The required libraries for a complete build are:
 servlet.jar     - The Servlet package "javax.servlet" is available from Sun.
 junit.jar       - The JUnit test library, available from "www.junit.org"
 log4j-1.2.3.jar - The Log4J logging framework: "jakarta.apache.org".
-JDK 1.4         - For the Java1.4 style logging support
+JDK 1.4         - For the Java1.4 style logging, configuration and printing 
+                  support
+JFreeChart-0.9.13 
+               - for the JFreeChart demo.
 
 Servlet-Demo classes
 --------------------
