--- a/jfreereport/ChangeLog
+++ b/jfreereport/ChangeLog
@@ -2,14 +2,15 @@
 5.  WHAT's NEW
 ---------------
 A list of changes in recent versions:
-0.8.4-6:
+0.8.4-6 (25-Nov-2003):
         * BugFix: In some cases the band layout manager "lost" the
           reference to the local LayoutSupport. This part was ugly
           and was completly rewritten.
 
         * BugFix: Repeating group headers were lost if the printing
           of the group footer of that group was delayed until a new
-          page was started.
+          page was started. The inner most group header was not printed
+          in such cases.
 
         * BugFix: Exceptions in the SimplePageLayouter may be lost when
           the clearCurrentEvent() method throws an other exception. This
@@ -26,6 +27,9 @@ A list of changes in recent versions:
         * The Total* Function now support a global computation, if no
           group is defined. They do no longer depend on the existence
           of the default group.
+
+        * JFreeReport now prints the current version of the Core-Module
+          during the boot process.
            
 0.8.4-5 (07-Nov-2003):
         * BugFix: The report footer was not printed, if an automatic
