--- a/jfreereport/TODO.txt
+++ b/jfreereport/TODO.txt
@@ -1,12 +1,6 @@
-0.8.4:
-  * External style definitions for the ext-parser (includes)
-  * Document the changes and write a converter for report definitions
-    from 0.8.3 to 0.8.4
-
 0.8.5:
   * Implement function sets (see #note-1030630)
   * pluggable input support (WMF, SVG etc)
-  * Watermarks for Pages ...
   * Multi-Page definition, 1 pageformat for all pages
     multiple pages (x and y),
     a defined max width and max height (may be less than the given log page size)
@@ -16,7 +10,8 @@
   * Formated Text support for printing (RTF, HTML)
   * Allow access to the last datarow to make reporting results available outside.
   * Simple parser writer and comment handler ...
-
+  * Expand Tab-Stops
+  
 0.8.6:
   * Columns
   * PageBreaks within a band
