--- a/pixie/CHANGELOG
+++ b/pixie/CHANGELOG
@@ -1,3 +1,5 @@
+21-Oct-2004 : BugFixes ..
+
 19-Jan-2004 : Some final changes and discontinued for now. Implementing the writing
               support seems useless in a free world, where SVG is available. Some minor
               fixes were made in the WMF-Reading, it is still not complete (and as there
