--- a/pixie/README
+++ b/pixie/README
@@ -1,9 +1,9 @@
 Pixie is a WMF-File reading library originally written by David R. Harris as
-converter for the Pixie-ImageViewer. Pixie was long time dead and is currently
+converter for the Pixie-ImageViewer. Pixie was long time dead and is now
 resurrected as WMF-Reader and ImageProducer for Java 1.2.2 or higher.
 
 Pixie lacks the support for most BitMap-Formats but everything else is working
-fine. Write-Support is beeing implemented somewhere in the near future, classes
+fine. Write-Support will be implemented somewhere in the future, classes
 for the writesupport are mostly dummies at the moment.
 
 
