Merge: still the initial commit

--- a/jfreereport/README
+++ b/jfreereport/README
@@ -1,8 +1,8 @@
 ************************
-* JFREEREPORT 0.8.4_6  *
+* JFREEREPORT 0.8.5    *
 ************************
 
-25 Nov 2003
+?? Feb 2005
 
 1. INTRODUCTION
 ---------------
